# ducking-lake

./: CitiesBikesETL.drawio  CityBikesETL.drawio  README.md  hello.py  pyproject.toml
client/: __init__.py  city_bikes.py  endpoints.py  schemas.py
db_models/: networks.py
etl/assets/: networks.py
etl/resources/: postgres.py
infrastructure/db/: postgres.py
patterns/: __init__.py  singleton.py
utils/: logger.py  parsers.py
