[project]
name = "ducking-lake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli-local>=0.22.2",
    "awscli>=1.42.19",
    "dagster>=1.11.7",
    "duckdb>=1.3.2",
    "localstack>=4.7.0",
    "pandas>=2.3.2",
]
